# raylib-testing

./: .gitignore  CMakeLists.txt  todo
src/: constants.h  main.c  state.c  state.h
src/libs/: asteroid.c  asteroid.h  debug.c  debug.h  hud.c  hud.h  ship.c  ship.h
